# pious_aggregation_reports

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/: excel.py  main.py
src/pious_aggregation_reports/: aggregate.py  excel.py  main.py
src/pious_pro/: __main__.py  aggregate.py  cli.py  excel.py  main.py  trial.py  version.py
src/pious_pro/_executables/: aggregate.py  conf.py  version.py
