[project]
name = "pious_pro"
version = "0.0.1"
authors = [{ name = "Ben Kushigian", email = "bkushigian@gmail.com" }]
description = "Build agg reports with Pious"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pious>=0.0.0.dev15",
    "numpy>=2.0.0",
    "matplotlib>=3.7.1",
    "pandas>=2.0.3",
    "openpyxl>=3.1.5",
    "tqdm>=4.67",
    "ansi>=0.3.7",
    "scikit-learn>=1.6.0"
]

[project.scripts]
aggregate = "pious_pro.__main__:main"
excel = "pious_pro.excel:main"

[project.urls]
Issues = "https://github.com/bkushigian/Pious/issues"
Homepage = "https://github.com/bkushigian/Pious"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
